<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" >

        <!-- Settings icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_assignment_ind_24" />

        <!-- Settings title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginStart="40dp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:context=".activities.RegisterActivity"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/ivRegister"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/default_avatar" />

        <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etUsername"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/etRegisterVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etVerifyPassword"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/etRegisterDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etDisplayName"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Image"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btnRegister"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
